tests/invalid/generic_apply_reject_type_alias.wio
@Apply(IsInteger<T>)
type IntList<T> = T[];

fn Entry() -> i32 {
    let values: IntList<string> = ["bad"];
    return values.Count() fit i32;
}
